[package]
name = "dmz-sound-booster"
edition = "2021"
version = "0.1.0"

[dependencies]
embassy-stm32 = { version = "0.1.0", path = "embassy/embassy-stm32", features = ["defmt", "stm32f767zi", "memory-x", "unstable-pac", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.5.0", path = "embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.4.0", path = "embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embedded-io-async = { version = "0.6.1" }
embassy-usb = { version = "0.1.0", path = "embassy/embassy-usb", features = ["defmt"] }

defmt = "0.3.5"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.1.0"
rand_core = "0.6.4"
critical-section = "1.1.2"
embedded-storage = "0.3.1"
static_cell = "2"

[profile.release]
debug = 2
